--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
-    "@types/node": "20.10.3",
-    "@types/react": "18.2.42",
+    "@types/node": "^20",
+    "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.4.14",
@@ -24,6 +24,6 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "5.3.2"
+    "typescript": "^5"
   }
 }
